--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,88 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  /* fonts */
+  --fs-200: 14px;
+  --fs-300: 20px;
+  --fs-400: 22px;
+  --fs-500: 32px;
+  --lh-1: 1;
+  --lh-1-1: 1.1;
+  --lh-1-4: 1.4;
+
+  /* colors */
+  --bkg: 248 80% 98%;
+  --muted: 248 15.7% 80%;
+  --text: 246 76% 4.9%;
+  --accent: 245 75% 54.5%;
+  --accent2: 40 98.2% 43.7%;
+
+  /* utils */
+  --space-sm: clamp(0.4rem, 1.5vw, .8rem);
+  --space-md: clamp(1rem, 2.5vw, 1.4rem);
+  --space-lg: clamp(2rem, 4vw, 2.2rem);
+  --content: 50ch;
+  --round-sm: 4px;
+  --round-md: 10px;
+  --round-lg: 15px;
+  --round-full: 100vmax;
+}
+
+body {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+  padding: var(--space-lg);
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: var(--fs-400);
+  line-height: var(--lh-1-4);
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  background-color: hsl(var(--bkg));
+  color: hsl(var(--text));
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+  line-height: var(--lh-1-1);
+  font-size: var(--fs-500);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+small {
+  font-size: var(--fs-200);
+  line-height: var(--lh-1);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.uppercase {
+  text-transform: uppercase;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.stack-lg {
+  display: grid;
+  gap: var(--space-lg);
+}
+
+.stack-md {
+  display: grid;
+  gap: var(--space-md);
+}
+
+.stack-sm {
+  display: grid;
+  gap: var(--space-sm);
 }
